force-app/main/default/objects/Payment__c/fields/AuthDescription__c.field-meta.xml
<CustomField>
    <fullName>AuthDescription__c</fullName>
    <label>AuthDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>