force-app/main/default/objects/Payment__c/fields/AuthResp__c.field-meta.xml
<CustomField>
    <fullName>AuthResp__c</fullName>
    <label>AuthResp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>