force-app/main/default/objects/Payment__c/fields/CardType__c.field-meta.xml
<CustomField>
    <fullName>CardType__c</fullName>
    <label>CardType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>