force-app/main/default/objects/Payment__c/fields/CCTRef__c.field-meta.xml
<CustomField>
    <fullName>CCTRef__c</fullName>
    <label>CCTRef</label>
    <length>50</length>
    <type>Text</type>
</CustomField>