force-app/main/default/objects/Payment__c/fields/Course_Registration__c.field-meta.xml
<CustomField>
    <fullName>Course_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Registration</label>
    <referenceTo>Course_Registration__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>