force-app/main/default/objects/Payment__c/fields/CurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>CurrentStatus__c</fullName>
    <label>CurrentStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>