force-app/main/default/objects/Payment__c/fields/ePayment_Account_No__c.field-meta.xml
<CustomField>
    <fullName>ePayment_Account_No__c</fullName>
    <label>ePayment Account No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>