force-app/main/default/objects/Payment__c/fields/Gateway_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Response_Date__c</fullName>
    <label>Gateway Response Date</label>
    <type>DateTime</type>
</CustomField>