force-app/main/default/objects/Payment__c/fields/Invoice_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Ref_No__c</fullName>
    <formula>Invoice__r.Reference_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Reference No</label>
    <type>Text</type>
</CustomField>