force-app/main/default/objects/Payment__c/fields/Payment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Payment_Provider__c</fullName>
    <formula>IF(CardType__c=&apos;001&apos;,&apos;Mastercard&apos;,
IF(CardType__c=&apos;002&apos;,&apos;Visa&apos;,
IF(CardType__c=&apos;2&apos;,&apos;Mastercard&apos;,
IF(CardType__c=&apos;3&apos;,&apos;Visa&apos;,
IF(CardType__c=&apos;51&apos;,&apos;PayNow&apos;,&apos;Other&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Provider</label>
    <type>Text</type>
</CustomField>