force-app/main/default/objects/Payment__c/fields/Receipt_Created__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked once the receipt has been created for a successful payment</description>
    <label>Receipt Created</label>
    <type>Checkbox</type>
</CustomField>