force-app/main/default/objects/Payment__c/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <formula>If(AuthResp__c=&apos;OK&apos;,&apos;Success&apos;,
If(ISBLANK(AuthResp__c),&apos;Pending&apos;,&apos;Failure&apos;))</formula>
    <label>Transaction Status</label>
    <type>Text</type>
</CustomField>