force-app/main/default/objects/Payment__c/recordTypes/PD_Payment.recordType-meta.xml
<RecordType>
    <fullName>PD_Payment</fullName>
    <active>true</active>
    <description>MVP1.0</description>
    <label>PD Payment</label>
</RecordType>