force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Course_Registration__c</columns>
    <columns>Amount__c</columns>
    <columns>Invoice__c</columns>
    <columns>Payment_Mode__c</columns>
    <columns>Payment_Provider__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Reference_No__c</columns>
    <columns>Result__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Status__c</field>
        <operation>equals</operation>
        <value>Failure</value>
    </filters>
    <label>All</label>
</ListView>